# falcon-llm-chainlit-Langchain-

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  chainlit.md  chatbot.py  pyproject.toml
app/helper/: logger_formatter.py
app/services/: llm.py
